--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,26 @@
 <header class="bg-primary text-white p-3">
-    <div class="container d-flex justify-content-between align-items-center">
-      <div class="d-flex align-items-center">
-        <img  routerLink="/" src="assets/logo1.jpg" class="me-2" >
-      </div>
-      <nav>
-        <a routerLink="/" class="text-white me-3">Accueil</a>
-        <a href="#" class="text-white me-3">A-propos</a>
-        <a routerLink="/connexion" class="text-white me-3">Connexion</a>
-        <a routerLink="/inscription" class="text-white me-3">Inscription</a>
-        <a href="#" class="text-white">Contact</a>
-      </nav>
+  <div class="container d-flex justify-content-between align-items-center">
+    <div class="d-flex align-items-center">
+      <img routerLink="/" src="assets/logo1.jpg" class="me-2">
     </div>
-  </header>
+    <nav class="d-none d-md-flex">
+      <a routerLink="/" class="text-white me-3">Accueil</a>
+      <a href="#" class="text-white me-3">A-propos</a>
+      <a routerLink="/connexion" class="text-white me-3">Connexion</a>
+      <a routerLink="/inscription" class="text-white me-3">Inscription</a>
+      <a href="#" class="text-white">Contact</a>
+    </nav>
+    <button class="navbar-toggler d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </div>
+  <div class="collapse d-md-none" id="navbarNav">
+    <nav class="flex-column">
+      <a routerLink="/" class="text-white p-2">Accueil</a>
+      <a href="#" class="text-white p-2">A-propos</a>
+      <a routerLink="/connexion" class="text-white p-2">Connexion</a>
+      <a routerLink="/inscription" class="text-white p-2">Inscription</a>
+      <a href="#" class="text-white p-2">Contact</a>
+    </nav>
+  </div>
+</header>
