--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,7 +8,6 @@ body {
   margin: auto;
 }
 
-
 /* Carousel styles */
 .carousel-inner img {
   width: 100%;
@@ -71,14 +70,12 @@ body {
   width: 100%;
 }
 
-
-
 h1 {
   text-align: center;
 }
 
-
 /**/
+
 .banner-container {
   background-image: url('/assets/banner.jpg'); /* Utiliser le chemin absolu */
   background-size: cover;
@@ -109,5 +106,69 @@ h1 {
   font-size: 0.9rem;
 }
 
+/* Responsive styles */
+@media (max-width: 768px) {
+  .carousel-inner img {
+    height: 400px;
+  }
 
-/**/
+  .card {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .carousel-inner img {
+    height: 300px;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  .card-title {
+    font-size: 1rem;
+  }
+
+  .card-text {
+    font-size: 0.8rem;
+  }
+}
+
+
+.carousel-caption1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: rgb(6, 138, 13) !important; /* Couleur du texte */
+  background-color: rgb(5, 6, 5) !important; /* Fond semi-transparent pour le texte */
+  padding: 15px; /* Padding autour du texte */
+  border-radius: 10px; /* Bordure arrondie */
+}
+
+.carousel-caption2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #ffeb0c; /* Couleur du texte */
+  background-color: rgb(5, 6, 5) !important;  /* Fond semi-transparent pour le texte */
+  padding: 15px; /* Padding autour du texte */
+  border-radius: 10px; /* Bordure arrondie */
+}
+
+.carousel-caption3 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #f00; /* Couleur du texte */
+  background-color: rgb(5, 6, 5) !important;  /* Fond semi-transparent pour le texte */
+  padding: 15px; /* Padding autour du texte */
+  border-radius: 10px; /* Bordure arrondie */
+}
