--- a/src/app/inscription/inscription.component.css
+++ b/src/app/inscription/inscription.component.css
@@ -1,5 +1,90 @@
-
 .my-container {
-  max-width: 500px;
-  margin-top: 10px;
+  max-width: 600px;
+  margin-top: 150px;
+}
+
+/* Cacher toutes les étapes sauf la active */
+.form-step {
+  display: none;
+}
+
+.form-step.active {
+  display: block;
+}
+
+.required {
+  color: red;
+}
+
+.form-navigation {
+  margin-top: 20px;
+}
+
+/* Styles pour les boutons */
+.btn-secondary {
+  background-color: #6c757d;
+  border-color: #6c757d;
+}
+
+.btn-secondary:hover {
+  background-color: #5a6268;
+  border-color: #545b62;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+  border-color: #004085;
+}
+
+/* Bouton S'inscrire */
+#submitButton {
+  margin-top: 0; /* Enlever la marge supérieure pour aligner les boutons */
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .my-container {
+    padding: 10px;
+  }
+
+  .card {
+    margin: 0;
+  }
+
+  .form-control {
+    width: 100%;
+  }
+
+  .btn-secondary,
+  .btn-primary {
+    width: 100%;
+    margin-top: 10px;
+  }
+
+  .form-navigation {
+    flex-direction: column;
+  }
+
+  #prevButton {
+    margin-bottom: 10px;
+  }
+
+  #nextButton {
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 480px) {
+  .my-container {
+    margin-top: 10px;
+  }
+
+  .card-header h2 {
+    font-size: 1.5rem;
+  }
 }
