--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -77,7 +77,7 @@ h1 {
 /**/
 
 .banner-container {
-  background-image: url('/assets/banner.jpg'); /* Utiliser le chemin absolu */
+  background-image: url('/assets/banner1.jpg'); /* Utiliser le chemin absolu */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
