--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,36 +10,36 @@
     <div class="carousel-item active">
       <img src="assets/image11.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption1 d-none d-md-block">
-        <h5>LOUER VOS BATIMENTS</h5>
+        <h5>METTEZ VOS IMMEUBLES EN LOCATION </h5>
         <p>
-          Voici un texte descriptif pour le premier slide.
-          Voici un texte descriptif pour le premier slide.
-          Voici un texte descriptif pour le premier slide.
-          Voici un texte descriptif pour le premier slide.
+          Rejoignez notre plateforme en quelques minutes seulement.
+          Notre processus d'inscription est rapide et sans tracas.
+          Créez un compte facilement et commencez à louer vos biens immédiatement.
+          Simplifiez la gestion de vos biens avec notre interface intuitive.
         </p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="assets/image2.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption2 d-none d-md-block">
-        <h5>LOUER VOS BATIMENTS</h5>
+        <h5>METTEZ VOS IMMEUBLES EN LOCATION</h5>
         <p>
-          Voici un texte descriptif pour le premier slide.
-          Voici un texte descriptif pour le premier slide.
-          Voici un texte descriptif pour le premier slide.
-          Voici un texte descriptif pour le premier slide.
+          Gérer vos annonces n'a jamais été aussi simple.
+          Modifiez, mettez à jour et suivez l'état de vos locations en temps réel.
+          Toutes vos informations sont centralisées et accessibles en un clic.
+          Notre tableau de bord clair et efficace facilite la gestion locative.
         </p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="assets/image33.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption3 d-none d-md-block">
-        <h5>LOUER VOS BATIMENTS</h5>
+        <h5>METTEZ VOS IMMEUBLES EN LOCATION</h5>
         <p>
-          Voici un texte descriptif pour le premier slide.
-          Voici un texte descriptif pour le premier slide.
-          Voici un texte descriptif pour le premier slide.
-          Voici un texte descriptif pour le premier slide.
+          Donnez à vos biens la visibilité qu'ils méritent.
+          Nos stratégies de marketing ciblé augmentent l'exposition de vos annonces.
+          Attirez un large public de locataires potentiels grâce à notre réseau étendu.
+          Maximisez vos chances de trouver rapidement des locataires de qualité.
         </p>
       </div>
     </div>
@@ -58,7 +58,7 @@
 <br>
 <br>
 
-<h1>LES CARACTERISTIQUES DES BATIMENTS OU IMMEUBLES À LOUER</h1>
+<h1>LES CARACTERISTIQUES DES BATIMENTS OU IMMEUBLES À METTRE EN LOUER</h1>
 
 <!-- Cards Section -->
 <div class="container my-5">
@@ -67,8 +67,13 @@
       <div class="card">
         <img src="assets/card1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Batiment 1</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">Model Immeuble</h5>
+          <p class="card-text">
+            Mettez vos biens en location en quelques étapes simples.
+            Ajoutez des détails et des référenes vous concernants ainsi que le batiment.
+            Fournissez toutes les informations nécessaires pour convaincre les locataires.
+            Votre annonce sera en ligne et visible par la DGAIE.
+          </p>
           <a href="#" class="btn btn-primary">Voir Plus</a>
         </div>
       </div>
@@ -77,8 +82,13 @@
       <div class="card">
         <img src="assets/card2.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Batiment 2</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">Model Immeuble</h5>
+          <p class="card-text">
+            Mettez vos biens en location en quelques étapes simples.
+            Ajoutez des détails et des référenes vous concernants ainsi que le batiment.
+            Fournissez toutes les informations nécessaires pour convaincre les locataires.
+            Votre annonce sera en ligne et visible par la DGAIE.
+          </p>
           <a href="#" class="btn btn-primary">Voir Plus</a>
         </div>
       </div>
@@ -87,15 +97,20 @@
       <div class="card">
         <img src="assets/card3.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Batiment 3</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">Model Immeuble</h5>
+          <p class="card-text">
+            Mettez vos biens en location en quelques étapes simples.
+            Ajoutez des détails et des référenes vous concernants ainsi que le batiment.
+            Fournissez toutes les informations nécessaires pour convaincre les locataires.
+            Votre annonce sera en ligne et visible par la DGAIE.
+          </p>
           <a href="#" class="btn btn-primary">Voir Plus</a>
         </div>
       </div>
     </div>
   </div>
 </div>
-
+<h1>DES MODELS D'IMMEUBLES</h1>
 <!-- Additional Banner with Cards -->
 <div class="banner-container">
   <div class="container my-5">
@@ -104,8 +119,13 @@
         <div class="card">
           <img src="assets/card6.jpg" class="card-img-top" alt="Card 4">
           <div class="card-body">
-            <h5 class="card-title">Card title 4</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Model Immeuble</h5>
+            <p class="card-text">
+              Mettez vos biens en location en quelques étapes simples.
+              Ajoutez des détails et des référenes vous concernants ainsi que le batiment.
+              Fournissez toutes les informations nécessaires pour convaincre les locataires.
+              Votre annonce sera en ligne et visible par la DGAIE.
+            </p>
           </div>
         </div>
       </div>
@@ -113,8 +133,13 @@
         <div class="card">
           <img src="assets/card5.jpg" class="card-img-top" alt="Card 5">
           <div class="card-body">
-            <h5 class="card-title">Card title 5</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Model Immeuble</h5>
+            <p class="card-text">
+              Mettez vos biens en location en quelques étapes simples.
+              Ajoutez des détails et des référenes vous concernants ainsi que le batiment.
+              Fournissez toutes les informations nécessaires pour convaincre les locataires.
+              Votre annonce sera en ligne et visible par la DGAIE.
+            </p>
           </div>
         </div>
       </div>
@@ -122,15 +147,24 @@
         <div class="card">
           <img src="assets/card4.jpg" class="card-img-top" alt="Card 6">
           <div class="card-body">
-            <h5 class="card-title">Card title 6</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Model Immeuble</h5>
+            <p class="card-text">
+              Mettez vos biens en location en quelques étapes simples.
+              Ajoutez des détails et des référenes vous concernants ainsi que le batiment.
+              Fournissez toutes les informations nécessaires pour convaincre les locataires.
+              Votre annonce sera en ligne et visible par la DGAIE.
+            </p>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+<br>
+<br>
+<br>
 
+<h1>DES MODELS DE BATIMENT</h1>
 <!-- Additional Banner with Cards -->
 <div class="dynamiiser">
   <div class="container my-5">
@@ -139,8 +173,13 @@
         <div class="card">
           <img src="assets/card7.jpg" class="card-img-top" alt="Card 4">
           <div class="card-body">
-            <h5 class="card-title">Card title 4</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">MOdel Batiment</h5>
+            <p class="card-text">
+              Mettez vos biens en location en quelques étapes simples.
+              Ajoutez des détails et des référenes vous concernants ainsi que le batiment.
+              Fournissez toutes les informations nécessaires pour convaincre les locataires.
+              Votre annonce sera en ligne et visible par la DGAIE.
+            </p>
           </div>
         </div>
       </div>
@@ -148,8 +187,13 @@
         <div class="card">
           <img src="assets/card8.jpg" class="card-img-top" alt="Card 5">
           <div class="card-body">
-            <h5 class="card-title">Card title 5</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">MOdel Batiment</h5>
+            <p class="card-text">
+              Mettez vos biens en location en quelques étapes simples.
+              Ajoutez des détails et des référenes vous concernants ainsi que le batiment.
+              Fournissez toutes les informations nécessaires pour convaincre les locataires.
+              Votre annonce sera en ligne et visible par la DGAIE.
+            </p>
           </div>
         </div>
       </div>
@@ -157,8 +201,13 @@
         <div class="card">
           <img src="assets/card9.jpg" class="card-img-top" alt="Card 6">
           <div class="card-body">
-            <h5 class="card-title">Card title 6</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">MOdel Batiment</h5>
+            <p class="card-text">
+              Mettez vos biens en location en quelques étapes simples.
+              Ajoutez des détails et des référenes vous concernants ainsi que le batiment.
+              Fournissez toutes les informations nécessaires pour convaincre les locataires.
+              Votre annonce sera en ligne et visible par la DGAIE.
+            </p>
           </div>
         </div>
       </div>
