--- a/src/app/connexion/connexion.component.html
+++ b/src/app/connexion/connexion.component.html
@@ -1,26 +1,28 @@
 <app-header></app-header>
-<div class="container my-container">
-  <div class="card justify-content-md-center">
-    <div class="card-header text-center">
-      <h2>Se connecter</h2>
-    </div>
-    <div class="card-body">
-      <form>
-        <div class="mb-3">
-          <label for="email" class="form-label">E-mail <span class="required">*</span></label>
-          <input type="email" id="email" class="form-control" placeholder="E-mail" required>
-        </div>
-        <div class="mb-3">
-          <label for="password" class="form-label">Mot de passe <span class="required">*</span></label>
-          <input type="password" id="password" class="form-control" placeholder="Mot de passe" required>
-        </div>
-        <div class="mb-3 d-flex justify-content-between">
-          <a [routerLink]= "['/inscription']" class="btn btn-link">S'inscrire</a>
-          <button [routerLink]= "['/offre']" type="submit" class="btn btn-primary">
-            <i class="fa-solid fa-check"></i>&nbsp;Se connecter
-          </button>
-        </div>
-      </form>
+<div class="background-container"> <!-- Conteneur principal pour l'image et le formulaire -->
+  <div class="container my-container">
+    <div class="card justify-content-md-center">
+      <div class="card-header text-center">
+        <h2>Se connecter</h2>
+      </div>
+      <div class="card-body">
+        <form>
+          <div class="mb-3">
+            <label for="email" class="form-label">E-mail <span class="required">*</span></label>
+            <input type="email" id="email" class="form-control" placeholder="E-mail" required>
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Mot de passe <span class="required">*</span></label>
+            <input type="password" id="password" class="form-control" placeholder="Mot de passe" required>
+          </div>
+          <div class="mb-3 d-flex justify-content-between">
+            <a [routerLink]= "['/inscription']" class="btn btn-link">S'inscrire</a>
+            <button [routerLink]= "['/offre']" type="submit" class="btn btn-primary">
+              <i class="fa-solid fa-check"></i>&nbsp;Se connecter
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </div>
